fix: attempt to prevent weird text sizing in overflow/scrolling shiki blocks

--- a/src/_assets/styles/styles.scss
+++ b/src/_assets/styles/styles.scss
@@ -4,6 +4,7 @@
 html {
 	scroll-behavior: smooth;
 	overflow-y: scroll;
+	text-size-adjust: none;
 }
 
 @media (min-width: 1024px) {
